colocando tofixed na calculadora

--- a/Calculadora - Grupo (Coffee Sense)/style.css
+++ b/Calculadora - Grupo (Coffee Sense)/style.css
@@ -27,16 +27,16 @@ body{
 }
 
 .container{
-    width: 700px;
-    height: 70vh;
-    background-color:#cdb89bc1;
+    width: 800px;
+    height: 80vh;
+    background-color:#E3C79E;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 20px;
     z-index: 100;
     margin-left: 18rem;
-    font-size: 18px;
+    font-size: 24px;
     text-align: center;
 }
 .titulo{
@@ -61,6 +61,7 @@ input{
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-size: 24px;
     
 }
 button{
